// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Quiz Component test (리뷰 모드) render Quiz Component (리뷰 모드) 1`] = `
<View
  style={
    {
      "margin": 20,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#F58F16",
        "borderColor": "orange",
        "borderRadius": 25,
        "borderWidth": 3,
        "height": 50,
        "justifyContent": "center",
        "margin": 10,
        "width": 50,
      }
    }
  >
    <Text
      style={
        {
          "color": "#FFFFFF",
          "fontSize": 10,
          "fontWeight": "bold",
        }
      }
    >
      medium
    </Text>
  </View>
  <Text
    style={
      {
        "fontSize": 20,
      }
    }
  >
    Q) In Yu-Gi-Oh, how does a player perform an Xyz Summon?
  </Text>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "margin": 10,
      }
    }
  >
    <Image
      source={{}}
      style={
        {
          "height": 20,
          "width": 20,
        }
      }
    />
    <Text
      style={
        [
          {
            "marginLeft": 10,
          },
          {
            "color": "red",
          },
        ]
      }
    >
      Banish A Number of Monsters From Your Hand And Deck
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "margin": 10,
      }
    }
  >
    <Image
      source={{}}
      style={
        {
          "height": 20,
          "width": 20,
        }
      }
    />
    <Text
      style={
        [
          {
            "marginLeft": 10,
          },
          {},
        ]
      }
    >
      Add the Monsters' Levels Together to Match the Xyz Monster
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "margin": 10,
      }
    }
  >
    <Image
      source={{}}
      style={
        {
          "height": 20,
          "width": 20,
        }
      }
    />
    <Text
      style={
        [
          {
            "marginLeft": 10,
          },
          {
            "color": "#5F37FF",
          },
        ]
      }
    >
      Overlay at least 2 Monsters of the Same Level (정답)
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "margin": 10,
      }
    }
  >
    <Image
      source={{}}
      style={
        {
          "height": 20,
          "width": 20,
        }
      }
    />
    <Text
      style={
        [
          {
            "marginLeft": 10,
          },
          {},
        ]
      }
    >
      Activate a Spell and Send Monsters to the Graveyard
    </Text>
  </View>
</View>
`;

exports[`Quiz Component test (퀴즈 모드) render Quiz Component (퀴즈 모드) 1`] = `
<View
  style={
    {
      "margin": 20,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#F58F16",
        "borderColor": "orange",
        "borderRadius": 25,
        "borderWidth": 3,
        "height": 50,
        "justifyContent": "center",
        "margin": 10,
        "width": 50,
      }
    }
  >
    <Text
      style={
        {
          "color": "#FFFFFF",
          "fontSize": 10,
          "fontWeight": "bold",
        }
      }
    >
      medium
    </Text>
  </View>
  <Text
    style={
      {
        "fontSize": 20,
      }
    }
  >
    Q) In Yu-Gi-Oh, how does a player perform an Xyz Summon?
  </Text>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "margin": 10,
      }
    }
  >
    <Image
      source={{}}
      style={
        {
          "height": 20,
          "width": 20,
        }
      }
    />
    <Text
      style={
        [
          {
            "marginLeft": 10,
          },
          false,
        ]
      }
    >
      Banish A Number of Monsters From Your Hand And Deck
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "margin": 10,
      }
    }
  >
    <Image
      source={{}}
      style={
        {
          "height": 20,
          "width": 20,
        }
      }
    />
    <Text
      style={
        [
          {
            "marginLeft": 10,
          },
          false,
        ]
      }
    >
      Add the Monsters' Levels Together to Match the Xyz Monster
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "margin": 10,
      }
    }
  >
    <Image
      source={{}}
      style={
        {
          "height": 20,
          "width": 20,
        }
      }
    />
    <Text
      style={
        [
          {
            "marginLeft": 10,
          },
          false,
        ]
      }
    >
      Overlay at least 2 Monsters of the Same Level
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "margin": 10,
      }
    }
  >
    <Image
      source={{}}
      style={
        {
          "height": 20,
          "width": 20,
        }
      }
    />
    <Text
      style={
        [
          {
            "marginLeft": 10,
          },
          false,
        ]
      }
    >
      Activate a Spell and Send Monsters to the Graveyard
    </Text>
  </View>
</View>
`;
